syntax = "proto3";

option go_package = ".";

package review;

service Review {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetQuestionData(GetQuestionDataRequest) returns (GetQuestionDataResponse);
  rpc CheckPass(CheckPassRequest) returns (CheckPassResponse);
  rpc CreateFront(CreateFrontRequest) returns (CreateFrontResponse);
}

message Data {
  int64 question_id = 1;
  int64 answer_id = 2;
  string answer = 3;
  float rating = 4;
}

message CreateRequest {
  int64 user_id = 1;
  repeated Data data = 2;
}

message CreateResponse {
  string status = 1;
}

message GetQuestionDataRequest {}

message GetQuestionDataResponse {
  repeated Data data = 1;
}

message CheckPassRequest {
  int64 user_id = 1;
}

message CheckPassResponse {
  bool passed = 1;
}

message Question {
  bool isActive = 1;
  int64 question_id = 2;
  string question = 3;
  repeated Answer answers = 4;
}

message Answer {
  int64 answers_id = 2;
  string answers = 3;
}

message CreateFrontRequest {}

message CreateFrontResponse {
  repeated Question questions = 1;
}
